# mojave

./: .dockerignore  .gitignore  CONTRIBUTING.md  Cargo.toml  Dockerfile  LICENSE  PROJECT_STRUCTURE.md  README.md  config-example.json  docker-compose.yml  justfile  network.rs  start-regtest.sh  start.sh
.github/: CODEOWNERS  copilot-instructions.md  pull_request_template.md
.github/workflows/: commitlint.yml  docker.yml  rust.yml  task.build-prod.yml  task.build-test.yml  task.dev-smoke.yml  task.docker.yml  task.linters-cargo.yml  task.linters.yml  task.pr-title.yml  task.release-binaries.yml  task.tests.yml  workflow.pr.yml  workflow.push.yml  workflow.release.yml
assets/: header.avif
bitcoin/: bitcoin.conf
cmd/daemon/: Cargo.toml
cmd/daemon/src/: error.rs  lib.rs
cmd/mojave/: Cargo.toml  command.rs  initializer.rs  prover_options.rs
cmd/node/: Cargo.toml
cmd/node/src/: cli.rs  config.rs  main.rs
cmd/node/src/rpc/: mod.rs  types.rs
cmd/prover/: Cargo.toml
cmd/prover/src/: cli.rs  config.rs  main.rs  options.rs
cmd/sequencer/: Cargo.toml
cmd/sequencer/src/: cli.rs  config.rs  k8s_leader.rs  main.rs
contracts/bridge/: .env.e2e  .env.headers  .env.merkle  .gitignore  ARCHITECTURE.md  FLOW_CHARTS.md  README.md  foundry.toml
contracts/bridge/script/: Deploy.s.sol
contracts/bridge/test/: BtcRelay.t.sol  (+2 more)
crates/batch-producer/: Cargo.toml
crates/batch-producer/src/: batch_accumulator.rs  batch_producer.rs  context.rs  error.rs  lib.rs  service.rs  types.rs  utils.rs
crates/batch-submitter/: Cargo.toml
crates/batch-submitter/src/: builder.rs  committer.rs  config.rs  context.rs  error.rs  lib.rs  notifier.rs  queue.rs  types.rs  writer.rs
crates/block-producer/: Cargo.toml
crates/block-producer/src/: block_producer.rs  context.rs  error.rs  lib.rs  service.rs  types.rs
crates/block-producer/src/rpc/: api.rs  batchproof.rs  context.rs  handlers.rs  mod.rs
crates/block-producer/src/rpc/requests/: batchproof.rs  mod.rs
crates/block-producer/src/services/: proof.rs
crates/bridge-types/: Cargo.toml
crates/bridge-types/src/: bitcoin.rs  events.rs  lib.rs  utxo.rs
crates/btc-watcher/: Cargo.toml
crates/btc-watcher/src/: block.rs  error.rs  lib.rs  multi.rs  sequence.rs  transaction.rs  types.rs
crates/btc-watcher/src/block/: block_watcher.rs  block_watcher_builder.rs  block_watcher_handle.rs  mod.rs
crates/btc-watcher/src/watch/: mod.rs  watcher.rs  watcher_builder.rs  watcher_handle.rs
crates/client/: Cargo.toml
crates/client/src/: client.rs  constants.rs  error.rs  lib.rs  request_builder.rs  retry_config.rs  types.rs  utils.rs
crates/common/: Cargo.toml
crates/common/src/: errors.rs  lib.rs  message.rs  types.rs
crates/coordination/: Cargo.toml
crates/coordination/src/: coordination_mode.rs  k8s.rs  lib.rs  sequencer.rs  utils.rs
crates/full-node/: Cargo.toml
crates/msgio/: Cargo.toml
crates/msgio/src/: dummy.rs  error.rs  lib.rs  types.rs
crates/networking/: Cargo.toml
crates/node/: Cargo.toml
crates/node/src/: block_queue.rs  error.rs  initializers.rs  lib.rs  node.rs  pending_heap.rs  types.rs  utils.rs
crates/node/src/p2p/: network.rs
crates/node/src/rpc/: api.rs  block.rs  block_ingestion.rs  context.rs  handlers.rs  mod.rs  tests.rs  types.rs
crates/node/src/rpc/requests/: block.rs  mod.rs  transaction.rs
crates/node/src/rpc/tasks/: block_ingest.rs  block_process.rs  filter_cleanup.rs  mod.rs
crates/node/src/services/: block.rs  eth.rs
crates/p2p/: Cargo.toml
crates/p2p/rlpx/: message.rs
crates/p2p/rlpx/mojave/: messages.rs
crates/p2p/src/rlpx/connection/: server.rs
crates/p2p/src/rlpx/mojave/: connection.rs
crates/proof-coordinator/: Cargo.toml
crates/proof-coordinator/src/: context.rs  coordinator.rs  errors.rs  lib.rs  types.rs
crates/prover/: Cargo.toml
crates/prover/src/: cli.rs  client.rs  error.rs  job.rs  lib.rs  message.rs  notifier.rs  request.rs  response.rs  server.rs  types.rs
crates/prover/src/rpc/: api.rs  context.rs  handlers.rs  mod.rs  proof.rs  types.rs
crates/prover/src/rpc/requests/: mod.rs  proof.rs
crates/prover/src/rpc/tasks/: mod.rs  proof_worker.rs
crates/prover/src/services/: jobs.rs
crates/prover/tests/: integration.rs
crates/rpc-core/: Cargo.toml
crates/rpc-macros/: Cargo.toml
crates/rpc-macros/src/: lib.rs
crates/rpc-server/: Cargo.toml
crates/rpc-server/src/: lib.rs
crates/rpc/core/: Cargo.toml
crates/rpc/core/src/: lib.rs  types.rs  utils.rs
crates/sequencer/: Cargo.toml
crates/signature/: Cargo.toml
crates/signature/src/: ecdsa.rs  eddsa.rs  error.rs  lib.rs  types.rs
crates/task/: Cargo.toml
crates/task/src/: constants.rs  error.rs  handle.rs  lib.rs  runner.rs  traits.rs
crates/tests/: Cargo.toml
crates/tests/src/: lib.rs
crates/tests/tests/: integration.rs  prover_integration.rs
crates/utils/: Cargo.toml
crates/utils/src/: block_on.rs  config.rs  constants.rs  convert.rs  daemon.rs  error.rs  hash.rs  health.rs  initializer.rs  lib.rs  logging.rs  network.rs  options.rs  ordered_block.rs  p2p.rs  prover_options.rs  prover_types.rs  signal.rs  unique_heap.rs
crates/utils/src/daemon/: error.rs  mod.rs  types.rs
crates/utils/src/rpc/: error.rs  mod.rs  types.rs  utils.rs
docker/: Dockerfile.node  Dockerfile.prover  Dockerfile.sequencer  Dockerfile.target
docs/: batch-queue-trait.md  config.md  daemonize.md  k8s.md  rpc.md  task.md
docs/rpc/: macros.md  server.md
k8s/: deploy.node.yaml  deploy.sequencer.yaml  namespace.yaml  ovh.pvc.yaml  ovh.setup.sh  pvc.yaml  rbac.sequencer.yaml  secret.sequencer.yaml  service.sequencer.yaml  setup.sh  stateful.sequencer.yaml
mojave-node/: mdbx.lck  node.key
rlpx/connection/: server.rs
scripts/: bitcoin-regtest.sh  start.sh  update_ethrex_rev.sh
scripts/bridge/: README.md  build.sh  deploy.sh  indexer.sh  test-e2e.sh  test.sh
scripts/ci/: dev-smoke-commands.txt  run-dev-smoke-commands.sh
test_data/: tests-e2e.sh
tests/: tests-e2e.sh
tooling/load_generator/: Cargo.toml
tooling/load_generator/src/: main.rs  throttler.rs  token_bucket.rs
(+53 files in other folders)
