[workspace]
package.version = "0.1.0"
package.edition = "2024"
package.authors = ["1six Technologies <general@1six.tech>"]
package.description = "A modular Rust workspace for Mojave infrastructure components, including full node, sequencer, prover, and cryptographic utilities."
package.license = "MIT"
package.homepage = "https://mojave.gg"
package.repository = "https://github.com/1sixtech/mojave"
package.documentation = "https://docs.mojave.gg"
package.readme = "README.md"
package.keywords = [
  "blockchain",
  "bitcoin",
  "evm",
  "zk",
  "sequencer",
  "prover",
  "layer2",
]

members = [
  "cmd/node",
  "cmd/prover",
  "cmd/sequencer",
  "crates/batch-submitter",
  "crates/block-producer",
  "crates/btc-watcher",
  "crates/client",
  "crates/node",
  "crates/proof-coordinator",
  "crates/prover",
  "crates/signature",
  "crates/tests",
  "crates/utils",
]
default-members = ["cmd/node", "cmd/prover", "cmd/sequencer"]
resolver = "2"

[workspace.dependencies]
mojave-block-producer = { path = "crates/block-producer" }
mojave-utils = { path = "crates/utils" }
mojave-client = { path = "crates/client" }
mojave-node-lib = { path = "crates/node" }
mojave-prover-lib = { path = "crates/prover" }
mojave-signature = { path = "crates/signature" }
mojave-tests = { path = "crates/tests" }

ethrex-blockchain = { git = "https://github.com/1sixtech/ethrex", rev = "9a771ea8f3b895153a5f122caab87a1e7e6f7967", default-features = false }
ethrex-l2 = { git = "https://github.com/1sixtech/ethrex", rev = "9a771ea8f3b895153a5f122caab87a1e7e6f7967", default-features = false }
ethrex-l2-common = { git = "https://github.com/1sixtech/ethrex", rev = "9a771ea8f3b895153a5f122caab87a1e7e6f7967", default-features = false }
ethrex-l2-rpc = { git = "https://github.com/1sixtech/ethrex", rev = "9a771ea8f3b895153a5f122caab87a1e7e6f7967", default-features = false }
ethrex-metrics = { git = "https://github.com/1sixtech/ethrex", rev = "9a771ea8f3b895153a5f122caab87a1e7e6f7967", default-features = false }
ethrex-rpc = { git = "https://github.com/1sixtech/ethrex", rev = "9a771ea8f3b895153a5f122caab87a1e7e6f7967", default-features = false }
ethrex-storage-rollup = { git = "https://github.com/1sixtech/ethrex", rev = "9a771ea8f3b895153a5f122caab87a1e7e6f7967", default-features = false }
ethrex-vm = { git = "https://github.com/1sixtech/ethrex", rev = "9a771ea8f3b895153a5f122caab87a1e7e6f7967", default-features = false }
ethrex-common = { git = "https://github.com/1sixtech/ethrex", rev = "9a771ea8f3b895153a5f122caab87a1e7e6f7967" }
ethrex-p2p = { git = "https://github.com/1sixtech/ethrex", rev = "9a771ea8f3b895153a5f122caab87a1e7e6f7967" }
ethrex-rlp = { git = "https://github.com/1sixtech/ethrex", rev = "9a771ea8f3b895153a5f122caab87a1e7e6f7967" }
ethrex-storage = { git = "https://github.com/1sixtech/ethrex", rev = "9a771ea8f3b895153a5f122caab87a1e7e6f7967" }
ethrex-prover = { git = "https://github.com/1sixtech/ethrex", rev = "9a771ea8f3b895153a5f122caab87a1e7e6f7967" }
zkvm_interface = { git = "https://github.com/1sixtech/ethrex", rev = "9a771ea8f3b895153a5f122caab87a1e7e6f7967", default-features = false }

anyhow = { version = "1.0" }
axum = "0.8.1"
bincode = "1.3"
bitcoin = { version = "0.32", default-features = false }
bytes = { version = "1.6.0", features = ["serde"] }
clap = { version = "4.5", default-features = false }
ed25519-dalek = { version = "2.1.1", features = ["rand_core", "serde"] }
eyre = "0.6.12"
futures = "0.3"
hex = "0.4.3"
k256 = { version = "0.13.3", features = ["ecdh"] }
lazy_static = "1.5.0"
local-ip-address = { version = "0.6" }
rand = { version = "0.8.5", default-features = false }
reqwest = { version = "0.12.7", features = ["json"] }
secp256k1 = { version = "0.29.1", default-features = false, features = [
  "serde",
] }
serde = { version = "1.0", default-features = false }
serde_json = "1.0"
thiserror = "2"
tiny-keccak = "2.0.0"
tokio = { version = "1", default-features = false }
tokio-stream = { version = "0.1.17" }
tokio-util = { version = "0.7", default-features = false }
tower-http = { version = "0.6.2", default-features = false }
tracing = "0.1"
tracing-subscriber = "0.3"
trait-variant = "0.1"
zeromq = { version = "0.4", default-features = false }

# [patch.crates-io]
# secp256k1 = { git = "https://github.com/sp1-patches/rust-secp256k1", tag = "patch-0.29.1-sp1-5.0.0" }
