[workspace]
package.version = "0.1.0"
package.edition = "2024"
package.authors = ["1six Technologies <general@1six.tech>"]
package.description = "A modular Rust workspace for Mojave infrastructure components, including full node, sequencer, prover, and cryptographic utilities."
package.license = "MIT"
package.homepage = "https://mojave.gg"
package.repository = "https://github.com/1sixtech/mojave"
package.documentation = "https://docs.mojave.gg"
package.readme = "README.md"
package.keywords = [
  "blockchain",
  "bitcoin",
  "evm",
  "zk",
  "sequencer",
  "prover",
  "layer2",
]

members = [
  "cmd/node",
  "cmd/prover",
  "cmd/sequencer",
  "crates/batch-producer",
  "crates/batch-submitter",
  "crates/block-producer",
  "crates/btc-watcher",
  "crates/client",
  "crates/node",
  "crates/proof-coordinator",
  "crates/prover",
  "crates/rpc/core",
  "crates/rpc/macros",
  "crates/rpc/server",
  "crates/signature",
  "crates/task",
  "crates/tests",
  "crates/utils",
  "crates/msgio",
]
default-members = ["cmd/node", "cmd/prover", "cmd/sequencer"]
resolver = "2"

[workspace.dependencies]
mojave-batch-producer = { path = "crates/batch-producer" }
mojave-block-producer = { path = "crates/block-producer" }
mojave-client = { path = "crates/client" }
mojave-node-lib = { path = "crates/node" }
mojave-proof-coordinator = { path = "crates/proof-coordinator" }
mojave-prover-lib = { path = "crates/prover" }
mojave-rpc-core = { path = "crates/rpc/core" }
mojave-rpc-macros = { path = "crates/rpc/macros" }
mojave-rpc-server = { path = "crates/rpc/server" }
mojave-signature = { path = "crates/signature" }
mojave-task = { path = "crates/task" }
mojave-tests = { path = "crates/tests" }
mojave-utils = { path = "crates/utils" }
mojave-msgio = { path = "crates/msgio" }

ethrex-blockchain = { git = "https://github.com/1sixtech/ethrex", branch = "dh-mojave-p2p", default-features = false }
ethrex-common = { git = "https://github.com/1sixtech/ethrex", branch = "dh-mojave-p2p" }
ethrex-l2 = { git = "https://github.com/1sixtech/ethrex", branch = "dh-mojave-p2p", default-features = false }
ethrex-l2-common = { git = "https://github.com/1sixtech/ethrex", branch = "dh-mojave-p2p", default-features = false }
ethrex-p2p = { git = "https://github.com/1sixtech/ethrex", branch = "dh-mojave-p2p" }
ethrex-prover = { git = "https://github.com/1sixtech/ethrex", branch = "dh-mojave-p2p" }
ethrex-rpc = { git = "https://github.com/1sixtech/ethrex", branch = "dh-mojave-p2p", default-features = false }
ethrex-storage = { git = "https://github.com/1sixtech/ethrex", branch = "dh-mojave-p2p" }
ethrex-storage-rollup = { git = "https://github.com/1sixtech/ethrex", branch = "dh-mojave-p2p", default-features = false }
ethrex-vm = { git = "https://github.com/1sixtech/ethrex", branch = "dh-mojave-p2p", default-features = false }
guest_program = { git = "https://github.com/1sixtech/ethrex", branch = "dh-mojave-p2p", default-features = false }

anyhow = { version = "1.0" }
async-trait = "0.1"
async-nats = "0.44"
axum = { version = "0.8" }
bincode = { version = "1.3" }
bitcoin = { version = "0.32", default-features = false }
bitcoincore-rpc = "0.19.0"
bytes = { version = "1.6.0", features = ["serde"] }
clap = { version = "4.5", default-features = false }
daemonize = "0.5"
ed25519-dalek = { version = "2.1.1", features = ["rand_core", "serde"] }
futures = "0.3"
hex = "0.4.3"
lazy_static = "1.5.0"
local-ip-address = { version = "0.6" }
proc-macro2 = "1"
quote = "1"
rand = { version = "0.8", default-features = false }
reqwest = { version = "0.12.7", features = ["json"] }
secp256k1 = { version = "0.30.0", default-features = false, features = [
  "serde",
] }
serde = { version = "1.0", default-features = false }
serde_json = "1.0"
syn = { version = "2", features = ["full"] }
sysinfo = "0.37"
thiserror = "2"
tiny-keccak = "2.0.0"
tokio = { version = "1", default-features = false }
tokio-util = { version = "0.7", default-features = false }
tower-http = { version = "0.6.2", default-features = false }
tracing = "0.1"
tracing-subscriber = "0.3"
zeromq = { version = "0.4", default-features = false }
