[package]
name = "mojave-daemon"
version = { workspace = true }
edition = { workspace = true }
authors = { workspace = true }
license = { workspace = true }
homepage = { workspace = true }
repository = { workspace = true }
documentation = { workspace = true }

[dependencies]
anyhow = { workspace = true }
daemonize = { workspace = true}
sysinfo = { workspace = true}
tokio = { workspace = true, features = ["macros", "signal"] }
tracing = { workspace = true }
thiserror = { workspace = true }
