[package]
name = "mojave-node"
version = { workspace = true }
edition = { workspace = true }
authors = { workspace = true }
license = { workspace = true }
homepage = { workspace = true }
repository = { workspace = true }
documentation = { workspace = true }

[dependencies]
mojave-node-lib = { workspace = true }
mojave-rpc-core = { workspace = true }
mojave-rpc-server = { workspace = true }
mojave-utils = { workspace = true }

ethrex-rpc.workspace = true

anyhow = { workspace = true }
clap = { workspace = true, features = ["derive", "env"] }
hex = { workspace = true }
tracing = { workspace = true }
tokio = { workspace = true, features = ["full"] }
