[package]
name = "mojave-prover"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "mojave-prover"
path = "src/main.rs"

[dependencies]
mojave-prover-lib = { workspace = true, features = ["server"] }
mojave-utils = { workspace = true }

clap = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
