[package]
name = "mojave-prover"
version = { workspace = true }
edition = { workspace = true }
authors = { workspace = true }
license = { workspace = true }
homepage = { workspace = true }
repository = { workspace = true }
documentation = { workspace = true }

[dependencies]
mojave-prover-lib = { workspace = true }
mojave-utils = { workspace = true }

anyhow = { workspace = true }
clap = { workspace = true }
tracing = { workspace = true }
figment = { version = "0.10.19", features = [
  "env",
  "json",
  "serde_json",
  "toml",
] }
serde.workspace = true
