[package]
name = "mojave-sequencer"
version = { workspace = true }
edition = { workspace = true }
authors = { workspace = true }
license = { workspace = true }
homepage = { workspace = true }
repository = { workspace = true }
documentation = { workspace = true }

[dependencies]
mojave-block-producer = { workspace = true }
mojave-node-lib = { workspace = true }
mojave-utils = { workspace = true }

anyhow = { workspace = true }
clap = { workspace = true }
hex = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
