[package]
name = "mojave-batch-producer"
version = { workspace = true }
edition = { workspace = true }
authors = { workspace = true }
license = { workspace = true }
homepage = { workspace = true }
repository = { workspace = true }
documentation = { workspace = true }

[dependencies]
mojave-node-lib = { workspace = true }
mojave-task = { workspace = true }

ethrex-blockchain = { workspace = true, default-features = false }
ethrex-common = { workspace = true }
ethrex-l2-common = { workspace = true, default-features = false }
ethrex-storage = { workspace = true }
ethrex-storage-rollup = { workspace = true, default-features = false }
ethrex-vm = { workspace = true, default-features = false }

thiserror = { workspace = true }
tokio = { workspace = true, features = ["sync"] }
tracing = { workspace = true }
tokio = { workspace = true, features = ["sync"] }
tracing = { workspace = true }
