[package]
name = "mojave-batch-submitter"
version = { workspace = true }
edition = { workspace = true }
authors = { workspace = true }
license = { workspace = true }
homepage = { workspace = true }
repository = { workspace = true }
documentation = { workspace = true }

[package.metadata.cargo-shear]
ignored = ["secp256k1"]

[dependencies]
bitcoin = { workspace = true }
bitcoincore-rpc = { workspace = true }
rand = { workspace = true }
secp256k1 = { workspace = true, features = ["global-context", "std", "serde"] }
thiserror = { workspace = true }
tokio = { workspace = true, features = ["sync"] }
tracing = { workspace = true }
