[package]
name = "mojave-block-producer"
version = { workspace = true }
edition = { workspace = true }
authors = { workspace = true }
license = { workspace = true }
homepage = { workspace = true }
repository = { workspace = true }
documentation = { workspace = true }

[dependencies]
mojave-client = { workspace = true }
mojave-node-lib = { workspace = true }
mojave-rpc-core = { workspace = true }
mojave-rpc-macros = { workspace = true }
mojave-rpc-server = { workspace = true }
mojave-signature = { workspace = true }
mojave-utils = { workspace = true }

ethrex-blockchain = { workspace = true }
ethrex-common = { workspace = true }
ethrex-l2 = { workspace = true }
ethrex-l2-common = { workspace = true }
ethrex-p2p = { workspace = true }
ethrex-rpc = { workspace = true }
ethrex-storage = { workspace = true }
ethrex-storage-rollup = { workspace = true }
ethrex-vm = { workspace = true }

axum = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true, features = ["full"] }
tokio-stream = { workspace = true }
tracing = { workspace = true }
