[package]
name = "mojave-block-producer"
version = { workspace = true }
edition = { workspace = true }
authors = { workspace = true }
license = { workspace = true }
homepage = { workspace = true }
repository = { workspace = true }
documentation = { workspace = true }

[dependencies]
mojave-node-lib = { workspace = true }
mojave-task = { workspace = true }
mojave-utils = { workspace = true }

ethrex-blockchain = { workspace = true }
ethrex-common = { workspace = true }
ethrex-l2 = { workspace = true }
ethrex-l2-common = { workspace = true }
ethrex-storage = { workspace = true }
ethrex-storage-rollup = { workspace = true }
ethrex-vm = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true, features = ["full"] }
tracing = { workspace = true }
