[package]
name = "mojave-btc-watcher"
version = { workspace = true }
edition = { workspace = true }
authors = { workspace = true }
license = { workspace = true }
homepage = { workspace = true }
repository = { workspace = true }
documentation = { workspace = true }

[dependencies]
mojave-utils = { workspace = true }

anyhow = { workspace = true }
bitcoin = { workspace = true, features = ["std"] }
bytes = { workspace = true }
serde = { workspace = true, features = ["derive"] }
thiserror = { workspace = true }
tokio = { workspace = true, features = ["sync", "rt", "macros"] }
tokio-util = { workspace = true }
tracing = { workspace = true }
zeromq = { workspace = true, features = ["tokio-runtime", "all-transport"] }

[dev-dependencies]
mojave-tests = { workspace = true }
