[package]
name = "mojave-client"
version = "0.1.0"
edition = "2024"

[dev-dependencies]
mockito = "0.31"


[dependencies]
# ethrex
ethrex-common = { workspace = true }
ethrex-l2-common = { workspace = true }
ethrex-rpc = { workspace = true }
zkvm_interface = { workspace = true }

# mojave
mojave-signature = { workspace = true }

futures = { workspace = true }
hex = { workspace = true }
reqwest = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
tokio = { workspace = true, features = ["full"] }
