[package]
name = "mojave-client"
version = { workspace = true }
edition = { workspace = true }
authors = { workspace = true }
license = { workspace = true }
homepage = { workspace = true }
repository = { workspace = true }
documentation = { workspace = true }

[dependencies]
mojave-signature = { workspace = true }
mojave-utils = { workspace = true }

ethrex-common = { workspace = true }
ethrex-l2-common = { workspace = true }
ethrex-rpc = { workspace = true }
zkvm_interface = { workspace = true }

futures = { workspace = true }
reqwest = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true, features = ["full"] }
tracing = { workspace = true }

[dev-dependencies]
