# crates/common/Cargo.toml
[package]
name = "mojave-common"
version = "0.1.0"
edition = "2024"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { workspace = true, features = ["io-util"] }
thiserror = { workspace = true }
zkvm_interface = { workspace = true }