[package]
name = "mojave-coordination"
version = { workspace = true }
edition = { workspace = true }
authors = { workspace = true }
license = { workspace = true }
homepage = { workspace = true }
repository = { workspace = true }
documentation = { workspace = true }

[dependencies]
mojave-batch-producer = { workspace = true }
mojave-block-producer = { workspace = true }
mojave-node-lib = { workspace = true }
mojave-proof-coordinator = { workspace = true }
mojave-task = { workspace = true }
mojave-utils = { workspace = true }

k8s-openapi = { workspace = true }
kube = { workspace = true }
kube-leader-election = { workspace = true }
tracing = { workspace = true }

tokio = { workspace = true }
tokio-util = { workspace = true }
