
[package]
name = "mojave-msgio"
version = { workspace = true }
edition = { workspace = true }
authors = { workspace = true }
license = { workspace = true }
homepage = { workspace = true }
repository = { workspace = true }
documentation = { workspace = true }

[dependencies]
async-trait = { workspace = true }
bytes = { workspace = true }
serde = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
