[package]
name = "mojave-node-lib"
version = { workspace = true }
edition = { workspace = true }
authors = { workspace = true }
license = { workspace = true }
homepage = { workspace = true }
repository = { workspace = true }
documentation = { workspace = true }

[dependencies]
mojave-client = { workspace = true }
mojave-signature = { workspace = true }
mojave-utils = { workspace = true }

ethrex-blockchain = { workspace = true }
ethrex-common = { workspace = true }
ethrex-p2p = { workspace = true }
ethrex-rpc = { workspace = true }
ethrex-storage = { workspace = true, features = ["libmdbx"] }
ethrex-storage-rollup = { workspace = true }
ethrex-vm = { workspace = true }

axum = { workspace = true }
bytes = { workspace = true, features = ["serde"] }
clap = { workspace = true }
hex = { workspace = true }
local-ip-address = { workspace = true }
rand = { workspace = true }
secp256k1 = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true, features = ["full"] }
tokio-util = { workspace = true }
tower-http = { workspace = true, features = ["cors"] }
tracing = { workspace = true }

[dev-dependencies]
