[package]
name = "p2p"
version.workspace = true
edition.workspace = true
authors.workspace = true
description.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
documentation.workspace = true
readme.workspace = true
keywords.workspace = true

[dependencies]
ethrex-blockchain = { workspace = true }
ethrex-common = { workspace = true }
ethrex-rlp = { workspace = true }
ethrex-storage = { workspace = true }
ethrex-storage-rollup = { workspace = true }
ethrex-trie = { workspace = true }

mojave-task = { workspace = true }

aes = "0.8.4"
bytes = { workspace = true }
concat-kdf = "0.1.0"
ctr = "0.9.2"
ethereum-types = { version = "0.15.1", features = ["serialize"] }
futures = { workspace = true }
hex = "0.4.3"
hex-literal = "0.4.1"
hmac = "0.12.1"
keccak-hash = "0.11.0"
lazy_static = "1.5.0"
prometheus = "0.14.0"
rand = { workspace = true }
rayon = "1.10.0"
secp256k1 = { version = "0.29.1", default-features = false, features = [
    "global-context",
    "recovery",
    "rand",
] }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
sha2 = "0.10.8"
sha3 = "0.10.8"
snap = "1.1.1"
spawned-concurrency = "0.3.0"
spawned-rt = "0.3.0"
thiserror = { workspace = true }
tokio = { workspace = true, features = ["net"] }
tokio-stream = "0.1.17"
tokio-util = { workspace = true }
tracing = { workspace = true }
