[package]
name = "mojave-proof-coordinator"
version = { workspace = true }
edition = { workspace = true }
authors = { workspace = true }
license = { workspace = true }
homepage = { workspace = true }
repository = { workspace = true }
documentation = { workspace = true }

[dependencies]
mojave-client = { workspace = true }

ethrex-blockchain = { workspace = true }
ethrex-common = { workspace = true, features = ["c-kzg"] }
ethrex-l2 = { workspace = true }
ethrex-l2-common = { workspace = true }
ethrex-storage = { workspace = true }
ethrex-storage-rollup = { workspace = true }

reqwest = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true, features = ["sync", "net"] }
tracing = { workspace = true }
zkvm_interface = { workspace = true }
