[package]
name = "mojave-prover-lib"
version = { workspace = true }
edition = { workspace = true }
authors = { workspace = true }
license = { workspace = true }
homepage = { workspace = true }
repository = { workspace = true }
documentation = { workspace = true }

[dependencies]
mojave-utils = { workspace = true }

clap = { workspace = true }
ethrex-l2-common = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true, features = ["sync", "net"] }
zkvm_interface = { workspace = true }


# server only dep
ethrex-prover = { workspace = true, optional = true }
tracing = { workspace = true }

[dev-dependencies]
tokio = { workspace = true, features = [
	"io-util",
	"macros",
	"rt-multi-thread",
	"time",
] }

[features]
default = []
client = []
server = ["ethrex-prover"]
