[package]
name = "mojave-prover-lib"
version = { workspace = true }
edition = { workspace = true }
authors = { workspace = true }
license = { workspace = true }
homepage = { workspace = true }
repository = { workspace = true }
documentation = { workspace = true }

[dependencies]
mojave-client = { workspace = true }
mojave-utils = { workspace = true }

ethrex-prover = { workspace = true }
ethrex-rpc = { workspace = true }
guest_program = { workspace = true }

axum = { workspace = true }
bincode = { workspace = true }
hex = { workspace = true }
reqwest = { workspace = true }
serde_json = { workspace = true }
tiny-keccak = { workspace = true }
tokio = { workspace = true }
tower-http = { workspace = true, features = ["cors"] }
tracing = { workspace = true }
